Resolve a lot of OSGi access violations. More to be fixed.
git-svn-id: https://svn.apache.org/repos/asf/tuscany/branches/sca-equinox@709339 13f79535-47bb-0310-9956-ffa450edef68